--- a/index.html
+++ b/index.html
@@ -10,7 +10,116 @@
 </head>
 <body>
     <div class="container">
-        <h1>Weather App</h1>
+        <input type="text" placeholder="Search a city">
+        <button>SEARCH</button>
+        <h1>CITY NAME</h1>
+        <hr>
+        <h3 id="day">Thursday, 10 July </h3>
+        <h3 id="time">Time</h3>
+        <hr>
+        <div class="card">
+             <div class="card-body">
+                 This will display the current temperature for the day and
+                 it will have the degree conversion buttion/link
+                 <div class="container text-center">
+                    <div class="row">
+                        <div class="col">
+                            Temperature in degrees
+                        </div>
+                         <div class="col">
+                             Weather icon
+                        </div>
+                        <div class="col">
+                            humidity, windspeed, high and low temps
+                        </div>
+                    </div>
+                </div>
+             </div>
+        </div>
+        <br>
+        <div class="card">
+             <div class="card-body">
+                 <div class="container text-center">
+                    <div class="row">
+                        <div class="col">
+                            MONDAY
+                        </div>
+                        <div class="col">
+                             image of the weather
+                        </div>
+                         <div class="col">
+                            temperature of that day
+                         </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            TUESDAY
+                        </div>
+                        <div class="col">
+                             image of the weather
+                        </div>
+                         <div class="col">
+                            temperature of that day
+                         </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            WEDNESDAY
+                        </div>
+                        <div class="col">
+                             image of the weather
+                        </div>
+                         <div class="col">
+                            temperature of that day
+                         </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            THURSDAY
+                        </div>
+                        <div class="col">
+                             image of the weather
+                        </div>
+                         <div class="col">
+                            temperature of that day
+                         </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            FRIDAY
+                        </div>
+                        <div class="col">
+                             image of the weather
+                        </div>
+                         <div class="col">
+                            temperature of that day
+                         </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            SATURDAY
+                        </div>
+                        <div class="col">
+                             image of the weather
+                        </div>
+                         <div class="col">
+                            temperature of that day
+                         </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            SUNDAY
+                        </div>
+                        <div class="col">
+                             image of the weather
+                        </div>
+                         <div class="col">
+                            temperature of that day
+                         </div>
+                    </div>
+                </div>
+             </div>
+        </div>
     </div>
     <script src="src/app.js"></script>
 </body>
