--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <div class="container">
-        <input type="text" placeholder="Search a city">
-        <button>SEARCH</button>
+        <input type="text" placeholder="Search a city" id="input-city">
+        <button type="button" class="btn btn-primary" id="btn-search">Search</button>
         <h1>CITY NAME</h1>
         <hr>
         <h3 id="day">Thursday, 10 July </h3>
@@ -25,6 +25,10 @@
                     <div class="row">
                         <div class="col">
                             Temperature in degrees
+                            <div class="btn-group">
+                                <a href="#" class="btn btn-primary active" aria-current="page">°C</a>
+                                <a href="#" class="btn btn-primary">°F</a>
+                            </div>
                         </div>
                          <div class="col">
                              Weather icon
