--- a/index.html
+++ b/index.html
@@ -6,16 +6,27 @@
     <link rel="stylesheet" href="src/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <title>Vanilla Weather App</title>
 </head>
 <body>
     <div class="container">
         <input type="text" placeholder="Search a city" id="input-city">
         <button type="button" class="btn btn-primary" id="btn-search">Search</button>
-        <h1>CITY NAME</h1>
+        <h1 id="city-name">CAPE TOWN</h1>
         <hr>
-        <h3 id="day">Thursday, 10 July </h3>
-        <h3 id="time">Time</h3>
+        <div class="row">
+            <div class="col">
+                <h3 id="current-day">
+                    Thursday, 10 July
+                </h3>
+            </div>
+            <div class="col">
+                <h3 id="current-time">TIME</h3>
+            </div>
+        </div>
         <hr>
         <div class="card">
              <div class="card-body">
