--- a/index.html
+++ b/index.html
@@ -31,12 +31,10 @@
         <hr>
         <div class="card">
              <div class="card-body">
-                 This will display the current temperature for the day and
-                 it will have the degree conversion buttion/link
                  <div class="container text-center">
                     <div class="row">
                         <div class="col">
-                            Temperature in degrees
+                            <h3 id="current-temp">Temperature in degrees</h3>
                             <div class="btn-group">
                                 <a href="#" class="btn btn-primary active" aria-current="page">°C</a>
                                 <a href="#" class="btn btn-primary">°F</a>
