added a ul, and removed text from div

--- a/index.html
+++ b/index.html
@@ -35,16 +35,21 @@
                     <div class="row">
                         <div class="col">
                             <h3 id="current-temp">Temperature in degrees</h3>
-                            <div class="btn-group">
+                            <div class="btn-group" id="btn-degrees">
                                 <a href="#" class="btn btn-primary active" aria-current="page">°C</a>
                                 <a href="#" class="btn btn-primary">°F</a>
                             </div>
                         </div>
-                         <div class="col">
-                             Weather icon
+                         <div class="col" id="weather-icon">
+                            
                         </div>
                         <div class="col">
-                            humidity, windspeed, high and low temps
+                            <ul id="weather-info">
+                                <li id="hum">HUMIDITY</li>
+                                <li id="wind">WINDSPEED</li>
+                                <li id="hi">HIGH</li>
+                                <li id="low">LOW</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
