--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div class="container">
-        <input type="text" placeholder="Search a city" id="input-city">
+        <input type="text" placeholder="Search a city" id="input-city" style="color: white;">
         <button type="button" class="btn btn-primary" id="btn-search">Search</button>
         <h1 id="city-name">CAPE TOWN</h1>
         <hr>
