--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <title>Vanilla Weather App</title>
 </head>
-<body>
+<body class="text-reset>
     <div class="container">
         <input type="text" placeholder="Search a city" id="input-city" style="color: white;">
         <button type="button" class="btn btn-primary" id="btn-search">Search</button>
@@ -29,7 +29,7 @@
             </div>
         </div>
         <hr>
-        <div class="card">
+        <div class="card" id="todays-info">
              <div class="card-body">
                  <div class="container text-center">
                     <div class="row">
@@ -56,7 +56,7 @@
              </div>
         </div>
         <br>
-        <div class="card">
+        <div class="card" id="forcast">
              <div class="card-body">
                  <div class="container text-center">
                     <div class="row">
