--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
         </div>
         </div>
         
+        
+    </div>
+    <div class="footer">
+        coded by <a href="https://github.com/Maribau11/vanilla-weather-app">Mariam Baulackey</a>
     </div>
     <script src="src/app.js"></script>
 </body>
