added a forecast section

--- a/index.html
+++ b/index.html
@@ -66,13 +66,68 @@
             </div>
             <br>
         </div>
+        <div class="forecast">
+            <div class="row">
+                <div class="col">
+                    <h4 class="forecast-days">Day 1</h4>
+                    <br>
+                    <img src="img1.png" alt="" class="weather-icon" id="day1-icon">
+                    <br>
+                    <div id="day-1-temp">
+                        <span  id="day1high">18</span>
+                        <span  id="day1low">11</span>
+                    </div>
+                </div>
+                 <div class="col">
+                    <h4 class="forecast-days">Day 2</h4>
+                    <br>
+                    <img src="img1.png" alt=""class="weather-icon"id="day2-icon">
+                    <br>
+                    <div id="day-2-temp">
+                        <span  id="day2high">18</span>
+                        <span  id="day2low">11</span>
+                    </div>
+                </div>
+                 <div class="col">
+                    <h4 class="forecast-days">Day 3</h4>
+                    <br>
+                    <img src="img1.png" alt=""class="weather-icon"id="day3-icon">
+                    <br>
+                   <div id="day-3-temp">
+                        <span  id="day3high">18</span>
+                        <span  id="day3low">11</span>
+                    </div>
+                </div>
+                 <div class="col">
+                    <h4 class="forecast-days">Day 4</h4>
+                    <br>
+                    <img src="img1.png" alt=""class="weather-icon"id="day4-icon">
+                    <br>
+                   <div id="day-4-temp">
+                        <span  id="day4high">18</span>
+                        <span  id="day4low">11</span>
+                    </div>
+                </div>
+                 <div class="col">
+                    <h4 class="forecast-days">Day 5</h4>
+                    <br>
+                    <img src="img1.png" alt=""class="weather-icon"id="day5-icon">
+                    <br>
+                    <div id="day-5-temp">
+                        <span  id="day5high">18</span>
+                        <span  id="day5low">11</span>
+                    </div>
+                </div>  
+            </div>
+        </div>
         </div>
         
         
     </div>
-    <div class="footer">
+   
+    <script src="src/app.js"></script>
+     <div class="footer">
         coded by <a href="https://github.com/Maribau11/vanilla-weather-app">Mariam Baulackey</a>
     </div>
-    <script src="src/app.js"></script>
 </body>
 </html>
